clusters/groups/on-prem/in-cluster/addons/traefik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-39.0.701_up39.0.7
  name: traefik-gateway
  namespace: kube-system
  resourceVersion: "4957"
  uid: 49670c3b-8bbd-42c7-8d16-666ed53c557c
spec:
  gatewayClassName: traefik
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: web
    port: 8000
    protocol: HTTP
